[package]
name = "xiao-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
