[package]
name = "xiao-files"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A minimal file exchange server designed for clients with browsers only."
homepage = "https://github.com/Evian-Zhang/xiao-files"
repository = "https://github.com/Evian-Zhang/xiao-files"
readme = "README.md"
keywords = ["file server", "http server", "server"]
categories = ["coommand-line-utilities", "filesystem", "network-programming", "web-programming::http-server"]

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
